--- a/PCA1.ipynb
+++ b/PCA1.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOkmSOoELfOItH5VmShlGpS",
+      "authorship_tag": "ABX9TyPyPqlBeSzcNu4jnQAMjzo2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C9lx8dEeDeaT",
-        "colab_type": "text"
+        "id": "C9lx8dEeDeaT"
       },
       "source": [
         "Using synthetic data, find the principal components for the dataset. <br>\n",
-        "The use the PCs to plot the data. "
+        "The use the PCs to plot the data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fqPVQOKQznaO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "fqPVQOKQznaO"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -59,11 +56,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DNN300ou7JAu",
-        "colab_type": "text"
+        "id": "DNN300ou7JAu"
       },
       "source": [
-        "Make synthetic data<br>\n",
+        "## Make synthetic data<br>\n",
         ">1000 samples<br>\n",
         "4 clusters<br>\n",
         "10 input features<br>"
@@ -72,12 +68,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PNKNQQ6_zvGe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PNKNQQ6_zvGe"
       },
       "source": [
-        "X1, Y1 = make_blobs(n_features=10, \n",
+        "X1, Y1 = make_blobs(n_features=10,\n",
         "         n_samples=1000,\n",
         "         centers=4, random_state=4,\n",
         "         cluster_std=2)\n",
@@ -90,9 +84,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RA1LVhz4PNnQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "RA1LVhz4PNnQ"
       },
       "source": [
         "df = pd.DataFrame(X1)"
@@ -103,21 +95,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WQmvp--aVP-_",
-        "colab_type": "text"
+        "id": "WQmvp--aVP-_"
       },
       "source": [
         "Plot the data each dimension by dimension<br>\n",
         "The scatter_matrix function plots each feature against each feature. <br>\n",
-        "With 10 dimensions it is difficult to visualize what is happening with the data. "
+        "With 10 dimensions it is difficult to visualize what is happening with the data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ox274QizQ0rb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Ox274QizQ0rb"
       },
       "source": [
         "scatter_matrix(df, alpha=0.2, figsize=(12, 12), diagonal='kde')\n",
@@ -129,20 +118,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5UyysiaIEt9W",
-        "colab_type": "text"
+        "id": "5UyysiaIEt9W"
       },
       "source": [
         "A color version of one of the above plots. <br>\n",
-        "Even using color it is still not very easy to vizualize the data. "
+        "Even using color it is still not very easy to vizualize the data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GL6Z-3IKCiVV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "GL6Z-3IKCiVV"
       },
       "source": [
         "plt.scatter(df.iloc[:,3],df.iloc[:,2],c=Y1)\n",
@@ -154,21 +140,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3lPmKdkrKuhc",
-        "colab_type": "text"
+        "id": "3lPmKdkrKuhc"
       },
       "source": [
-        " **Create a PCA model**\n",
+        "## Create a PCA model<br>\n",
         " X1 is the 1000 x 10 data and Y1 is cluster assignment for the 1000 samples. Create a PCA model with 4 components from sklearn.decomposition.<br>\n",
-        "The four components are linear combinations of the 10 original features. "
+        "The four components are linear combinations of the 10 original features."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pypgg5Fnzxcv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pypgg5Fnzxcv"
       },
       "source": [
         "pca = decomposition.PCA(n_components=4)"
@@ -179,11 +162,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5r2VcA6sK3Lv",
-        "colab_type": "text"
+        "id": "5r2VcA6sK3Lv"
       },
       "source": [
-        "The simulated data is already centered and scaled, so we can go ahead and fit the PCA model.<br> \n",
+        "The simulated data is already centered and scaled, so we can go ahead and fit the PCA model.<br>\n",
         "We will fit the PCA model using fit_transform function to our data X1 and pc contains the four principal components.<br>\n",
         "The function fit_transform will use the principal components to predict the cluster for each of the dataset values."
       ]
@@ -191,9 +173,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w868S8UG0CFe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "w868S8UG0CFe"
       },
       "source": [
         "pc = pca.fit_transform(X1)"
@@ -204,8 +184,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "PtaJgpbCLAqD",
-        "colab_type": "text"
+        "id": "PtaJgpbCLAqD"
       },
       "source": [
         "Make a pandas data frame with the principal components (PCs) and the known cluster assignments.\n",
@@ -215,12 +194,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h2sw12Fl0FKW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "h2sw12Fl0FKW"
       },
       "source": [
-        "pc_df = pd.DataFrame(data = pc , \n",
+        "pc_df = pd.DataFrame(data = pc ,\n",
         "        columns = ['PC1', 'PC2','PC3','PC4']) #Add additional column names here\n",
         "pc_df['Cluster'] = Y1\n",
         "pc_df.head(20)"
@@ -231,11 +208,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yJjAprJOLIQA",
-        "colab_type": "text"
+        "id": "yJjAprJOLIQA"
       },
       "source": [
-        "Examine the variance explained by each principal component. \n",
+        "## Examine the variance explained by each principal component.\n",
         "<br>The first two principal components explains over 70% of the variation in the data.\n",
         "\n",
         "[pca.explained_variance_ratio_](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)"
@@ -244,9 +220,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2RR-pz-YLMr9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "2RR-pz-YLMr9"
       },
       "source": [
         "pca.explained_variance_ratio_"
@@ -257,19 +231,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "r5ZBCLkGHZgb",
-        "colab_type": "text"
+        "id": "r5ZBCLkGHZgb"
       },
       "source": [
-        "Looking at the cumulative sum of the variance, we can see 92% of the variance is explained with the first four PCs. "
+        "Looking at the cumulative sum of the variance, we can see 92% of the variance is explained with the first four PCs."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J6i-bX0bHTlI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "J6i-bX0bHTlI"
       },
       "source": [
         "pca.explained_variance_ratio_.cumsum()"
@@ -280,8 +251,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LuWFVyK2LgTU",
-        "colab_type": "text"
+        "id": "LuWFVyK2LgTU"
       },
       "source": [
         "Plot the Scree plot"
@@ -290,9 +260,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4xDbG_di62K8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4xDbG_di62K8"
       },
       "source": [
         "#Add additional column names here\n",
@@ -305,24 +273,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oT_rtiRdLoP1",
-        "colab_type": "text"
+        "id": "oT_rtiRdLoP1"
       },
       "source": [
-        "Use the top two principal components and make a scatter plot. Use Seaborn’s lmplot to make the PCA plot using the fit_reg=False option and color clusters with ‘hue’."
+        "## Use the top two principal components and make a scatter plot.\n",
+        "\n",
+        "Use Seaborn’s lmplot to make the PCA plot using the fit_reg=False option and color clusters with ‘hue’."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XxOrz5YCLu3R",
-        "colab_type": "code",
-        "colab": {}
+        "id": "XxOrz5YCLu3R"
       },
       "source": [
         "sns.lmplot( x=\"PC1\", y=\"PC2\",\n",
-        "  data=pc_df, \n",
-        "  fit_reg=False, \n",
+        "  data=pc_df,\n",
+        "  fit_reg=False,\n",
         "  hue='Cluster', # color by cluster\n",
         "  legend=True,\n",
         "  scatter_kws={\"s\": 80}) # specify the point size"
@@ -333,13 +300,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BHh21-E2ITHF",
-        "colab_type": "text"
+        "id": "BHh21-E2ITHF"
       },
       "source": [
-        "# **Assignment 1:** <br>\n",
+        "##Assignment 1: <br>\n",
         "Change the number of principal components to different values. Can you increase the percentage of explained variation?<br><br>\n",
-        "Remember, you will have to add column names when you change the number of PCs. "
+        "Remember, you will have to add column names when you change the number of PCs."
       ]
     }
   ]
