--- a/PCA2.ipynb
+++ b/PCA2.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMHqpdb04k6rqDPa4Tt6BGP",
+      "authorship_tag": "ABX9TyMS7vQTNFStUCy17wP79ADK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +28,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bwYWelwClZ38",
-        "colab_type": "text"
+        "id": "bwYWelwClZ38"
       },
       "source": [
-        "Dimensionality reduction, an unsupervised machine learning method is used to reduce the number of feature variables for each data sample selecting set of principal features. Principal Component Analysis (PCA) is one of the popular algorithms for dimensionality reduction."
+        "## Dimensionality reduction,\n",
+        "\n",
+        "an unsupervised machine learning method is used to reduce the number of feature variables for each data sample selecting set of principal features. <br>\n",
+        "\n",
+        "Principal Component Analysis (PCA) is one of the popular algorithms for dimensionality reduction."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mKgjp9cZjJ0J",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mKgjp9cZjJ0J"
       },
       "source": [
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
+        "%cd cloned-repo"
       ],
       "execution_count": null,
       "outputs": []
@@ -54,8 +54,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eTkMpsbDloHG",
-        "colab_type": "text"
+        "id": "eTkMpsbDloHG"
       },
       "source": [
         "This example will use sklearn.decomposition.PCA module to find best 5 Principal components from Pima Indians Diabetes dataset."
@@ -64,9 +63,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UOUsl7AxkVgS",
-        "colab_type": "code",
-        "colab": {}
+        "id": "UOUsl7AxkVgS"
       },
       "source": [
         "import pandas as pd\n",
@@ -82,8 +79,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BYeJB3n3QRK7",
-        "colab_type": "text"
+        "id": "BYeJB3n3QRK7"
       },
       "source": [
         "The question, given certain features, can we predict who will get diabetes?"
@@ -92,9 +88,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7gYe4LEmkYZo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "7gYe4LEmkYZo"
       },
       "source": [
         "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age','class']\n",
@@ -106,9 +100,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qLlk512Jkn3J",
-        "colab_type": "code",
-        "colab": {}
+        "id": "qLlk512Jkn3J"
       },
       "source": [
         "dataframe"
@@ -119,9 +111,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B87smPjWXfY5",
-        "colab_type": "code",
-        "colab": {}
+        "id": "B87smPjWXfY5"
       },
       "source": [
         "scatter_matrix(dataframe, alpha=0.2, figsize=(12, 12), diagonal='kde')\n",
@@ -133,13 +123,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gzRxtMM1kkT6",
-        "colab_type": "code",
-        "colab": {}
+        "id": "gzRxtMM1kkT6"
       },
       "source": [
         "array = dataframe.values\n",
-        "X = array[:,0:8] \n",
+        "X = array[:,0:8]\n",
         "Y = array[:,8]\n",
         "print(\"Y has shape: \",Y.shape)\n",
         "print(\"X has shape: \",X.shape)\n"
@@ -150,19 +138,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aH6isWwfsbLm",
-        "colab_type": "text"
+        "id": "aH6isWwfsbLm"
       },
       "source": [
-        "Examine the variance explained by each principal component. We can clearly see that the first  principal component explains over 88% of the variation in the data."
+        "## Examine the variance explained by each principal component\n",
+        "\n",
+        "We can clearly see that the first  principal component explains over 88% of the variation in the data."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PsOephHWh9uv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "PsOephHWh9uv"
       },
       "source": [
         "pca = PCA(n_components = 5)\n",
@@ -177,9 +164,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DI-BxGLySCqc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DI-BxGLySCqc"
       },
       "source": [
         "pca.explained_variance_ratio_.cumsum()"
@@ -190,11 +175,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "G_D3Jvavrhag",
-        "colab_type": "text"
+        "id": "G_D3Jvavrhag"
       },
       "source": [
-        "Scree Test\n",
+        "## Scree Test\n",
         "\n",
         "This test is largely visual in that you plot your component number on the horizontal access, and your eigenvalues on the vertical axis."
       ]
@@ -202,9 +186,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tC2qIOaNriJr",
-        "colab_type": "code",
-        "colab": {}
+        "id": "tC2qIOaNriJr"
       },
       "source": [
         "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4','PC5']})\n",
@@ -216,23 +198,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nPwoUKlxt-m7",
-        "colab_type": "text"
+        "id": "nPwoUKlxt-m7"
       },
       "source": [
+        "## Use Seaborns Implot\n",
         "Now we can use the top two principal components and make scatter plot. We will use Seaborn’s lmplot to make the PCA plot using the fit_reg=False option and color clusters with ‘hue’."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cNubI5E3uv1M",
-        "colab_type": "code",
-        "colab": {}
+        "id": "cNubI5E3uv1M"
       },
       "source": [
         "pc = pca.fit_transform(X)\n",
-        "pc_df = pd.DataFrame(data = pc , \n",
+        "pc_df = pd.DataFrame(data = pc ,\n",
         "        columns = ['PC1', 'PC2','PC3','PC4','PC5'])\n",
         "pc_df['Cluster'] = Y\n",
         "pc_df.head()"
@@ -243,8 +223,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fSiVLNvJzbsF",
-        "colab_type": "text"
+        "id": "fSiVLNvJzbsF"
       },
       "source": [
         "We can clearly see the two clusters in our data. The two principal components are able to completely separate the clusters."
@@ -253,14 +232,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xoXSMVdYuAE0",
-        "colab_type": "code",
-        "colab": {}
+        "id": "xoXSMVdYuAE0"
       },
       "source": [
         "sns.lmplot( x=\"PC1\", y=\"Cluster\",\n",
-        "  data=pc_df, \n",
-        "  fit_reg=False, \n",
+        "  data=pc_df,\n",
+        "  fit_reg=False,\n",
         "  hue='Cluster', # color by cluster\n",
         "  legend=True,\n",
         "  scatter_kws={\"s\": 60}) # specify the point size"
@@ -271,14 +248,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vSLM_e5LUMJA",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vSLM_e5LUMJA"
       },
       "source": [
         "sns.lmplot( x=\"PC1\", y=\"PC2\",\n",
-        "  data=pc_df, \n",
-        "  fit_reg=False, \n",
+        "  data=pc_df,\n",
+        "  fit_reg=False,\n",
         "  hue='Cluster', # color by cluster\n",
         "  legend=True,\n",
         "  scatter_kws={\"s\": 60}) # specify the point size"
