--- a/PCA3.ipynb
+++ b/PCA3.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA3.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNC0HEK+cO4T9Fk67412Al3",
+      "authorship_tag": "ABX9TyPaoWIde/mrj4qHGZW1UvyY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dQA-lzez7wUZ",
-        "colab_type": "text"
+        "id": "dQA-lzez7wUZ"
       },
       "source": [
         "In this notebook we look at high dimensional data: hand drawn digits.<br>\n",
@@ -41,9 +40,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "avbXuWWJ53-a",
-        "colab_type": "code",
-        "colab": {}
+        "id": "avbXuWWJ53-a"
       },
       "source": [
         "# Clone the entire repo.\n",
@@ -57,9 +54,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iUuszzvpwNw-",
-        "colab_type": "code",
-        "colab": {}
+        "id": "iUuszzvpwNw-"
       },
       "source": [
         "import numpy as np\n",
@@ -80,11 +75,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dj-v9p0V1M0q",
-        "colab_type": "text"
+        "id": "dj-v9p0V1M0q"
       },
       "source": [
-        "Load the data: hand drawn digits<br>\n",
+        "## Load the data: hand drawn digits<br>\n",
         "\n",
         "The data consists of 8×8 pixel images, meaning that they are 64-dimensional (or features)<br>\n",
         "\n",
@@ -94,9 +88,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DGy5x_K6vymV",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DGy5x_K6vymV"
       },
       "source": [
         "digits = load_digits()\n",
@@ -108,9 +100,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N6opOuCbBmju",
-        "colab_type": "code",
-        "colab": {}
+        "id": "N6opOuCbBmju"
       },
       "source": [
         "X = digits.images.reshape((len(digits.images), -1))\n",
@@ -122,19 +112,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UUbg2JGpC_AT",
-        "colab_type": "text"
+        "id": "UUbg2JGpC_AT"
       },
       "source": [
-        "**Create a model to classifiy the digits** "
+        "## Create a model to classifiy the digits"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pbugBOeRCxwo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "pbugBOeRCxwo"
       },
       "source": [
         "model_orig = DecisionTreeClassifier()\n",
@@ -151,20 +138,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "i-JME-IS9kUI",
-        "colab_type": "text"
+        "id": "i-JME-IS9kUI"
       },
       "source": [
-        "**For the ASSIGNMENT**\n",
+        "**For the ASSIGNMENT**<br>\n",
         "Change the number of dimensions here"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Use PCA"
+      ],
+      "metadata": {
+        "id": "OOIcND-w8pzK"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "cgAWXyTev2kM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "cgAWXyTev2kM"
       },
       "source": [
         "pca = PCA(2)  # project from 64 to 2 dimensions\n",
@@ -179,21 +172,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1C09SAUZ4FFV",
-        "colab_type": "text"
+        "id": "1C09SAUZ4FFV"
       },
       "source": [
         "We can now plot the first two principal components of each point to learn about the data. <br>\n",
         "There are 10 clusters, one for each digit between 0 - 9. <br>\n",
-        "Using just two PCs, we get the following clusters. "
+        "Using just two PCs, we get the following clusters."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ed_Hra3DwHMI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ed_Hra3DwHMI"
       },
       "source": [
         "plt.scatter(projected[:, 0], projected[:, 1],\n",
@@ -210,13 +200,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hBTF_wdQ42oy",
-        "colab_type": "text"
+        "id": "hBTF_wdQ42oy"
       },
       "source": [
         "Each image in the training set is defined by a collection of 64 pixel values, which we will call the vector  𝑥 :\n",
         "\n",
-        "𝑥=[𝑥1,𝑥2,𝑥3⋯𝑥64] \n",
+        "𝑥=[𝑥1,𝑥2,𝑥3⋯𝑥64]\n",
         "\n",
         "One way we can think about this is in terms of a pixel basis. That is, to construct the image, we multiply each element of the vector by the pixel it describes, and then add the results together to build the image:\n",
         "\n",
@@ -226,9 +215,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fw3cz9x76PT8",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Fw3cz9x76PT8"
       },
       "source": [
         "from IPython.display import Image\n",
@@ -240,8 +227,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Os5UHHTy6r9V",
-        "colab_type": "text"
+        "id": "Os5UHHTy6r9V"
       },
       "source": [
         "But the pixel-wise representation is not the only choice of basis. We can also use other basis functions, which each contain some pre-defined contribution from each pixel, and write something like\n",
@@ -258,9 +244,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ihFk2v0r68Xb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ihFk2v0r68Xb"
       },
       "source": [
         "Image(\"pca.png\" , width=640)"
@@ -271,9 +255,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g35H_83VymvX",
-        "colab_type": "code",
-        "colab": {}
+        "id": "g35H_83VymvX"
       },
       "source": [
         "pca = PCA().fit(digits.data)\n",
@@ -287,23 +269,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vX53CakoCncH",
-        "colab_type": "text"
+        "id": "vX53CakoCncH"
       },
       "source": [
-        "**Training the model on the principal components**"
+        "## Training the model on the principal components"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DF9qqDHoA_Nt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DF9qqDHoA_Nt"
       },
       "source": [
         "model = DecisionTreeClassifier()\n",
-        "#List of (name, transform) tuples (implementing fit/transform) that are chained, \n",
+        "#List of (name, transform) tuples (implementing fit/transform) that are chained,\n",
         "#in the order in which they are chained, with the last object an estimator.\n",
         "pipeline = Pipeline(steps=[('p',pca),('m',model)])\n",
         "pipeline.fit(projected, y)\n",
@@ -319,16 +298,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jIAGYmQh-ST3",
-        "colab_type": "text"
+        "id": "jIAGYmQh-ST3"
       },
       "source": [
-        "# **Assignment**\n",
+        "# #Assignment\n",
         "The first model, model_orig was trained using all 64 pixels. It had an 85% accuracy score. <br>\n",
         "\n",
         "The second model, model, was trained using the first two principal components. It had an accuracy of 58%\n",
         "\n",
-        "Your assignment: Modify the code for PCA from 2 inputs to more inputs. Try to increase the accuracy of the model using different PCs. "
+        "Your assignment: Modify the code for PCA from 2 inputs to more inputs. Try to increase the accuracy of the model using different PCs."
       ]
     }
   ]
