--- a/PCA1.ipynb
+++ b/PCA1.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPyPqlBeSzcNu4jnQAMjzo2",
+      "authorship_tag": "ABX9TyPq8F3fLSU1cpbjr97tP8ir",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,11 +150,22 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "num_components=5"
+      ],
+      "metadata": {
+        "id": "kmnICTCtJS2M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "pypgg5Fnzxcv"
       },
       "source": [
-        "pca = decomposition.PCA(n_components=4)"
+        "pca = decomposition.PCA(n_components=num_components)"
       ],
       "execution_count": null,
       "outputs": []
@@ -193,12 +204,26 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "cols=[]\n",
+        "for i in range(1,num_components+1):\n",
+        "  cols.append('PC'+str(i))\n",
+        "cols"
+      ],
+      "metadata": {
+        "id": "bfgVc3yvJLC9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "h2sw12Fl0FKW"
       },
       "source": [
         "pc_df = pd.DataFrame(data = pc ,\n",
-        "        columns = ['PC1', 'PC2','PC3','PC4']) #Add additional column names here\n",
+        "        columns = cols)\n",
         "pc_df['Cluster'] = Y1\n",
         "pc_df.head(20)"
       ],
@@ -264,7 +289,7 @@
       },
       "source": [
         "#Add additional column names here\n",
-        "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4']})\n",
+        "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':cols})\n",
         "plt.plot('PC',\"var\",  data=df, color=\"c\");"
       ],
       "execution_count": null,
