--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNWAy2ftyRaDGGFM9jD6crD",
+      "authorship_tag": "ABX9TyM+ZTz1cWaWdSAynQJvGI96",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,9 +162,9 @@
       "cell_type": "code",
       "source": [
         "# save the model to disk\n",
-        "import pickle\n",
-        "filename = 'finalized_model.sav'\n",
-        "pickle.dump(reg, open(filename, 'wb'))"
+        "#import pickle\n",
+        "#filename = 'finalized_model.sav'\n",
+        "#pickle.dump(reg, open(filename, 'wb'))"
       ],
       "metadata": {
         "id": "-ZujyEv09S7N"
@@ -263,10 +263,11 @@
         "x_vals = (-3,3)\n",
         "#use the x_values to calc the y_values\n",
         "\n",
+        "\n",
         "for i in range(num_features):\n",
         "  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
         "#for Assignment 2 comment out the following line\n",
-        "#y_vals = reg.intercept_ + reg.coef_[0:1] * x_vals\n",
+        "y_vals = reg.intercept_ + reg.coef_[0:1] * x_vals\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
         "\n",
         "#plot the line using the x and y values\n",
