--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM+ZTz1cWaWdSAynQJvGI96",
+      "authorship_tag": "ABX9TyOupX9R0ah7HyTJ/sDogBz3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/LinearRegression1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this notebook we use synthetic data and a linear regression model from SKLearn to become familiar with linear regression."
+      ],
+      "metadata": {
+        "id": "rzr3_SdPf25c"
+      }
     },
     {
       "cell_type": "markdown",
