--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPWn5jw48Bhfw35m6+wO1sF",
+      "authorship_tag": "ABX9TyNA3036ianG1MxBim/4cJGU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/LinearRegression3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this notebook we use a weather dataset and a classical ML model to become more familiar with linear regression."
+      ],
+      "metadata": {
+        "id": "1Y1BZh1EgQd2"
+      }
     },
     {
       "cell_type": "code",
@@ -53,11 +62,11 @@
         "id": "L9JDk2RnS5SW"
       },
       "source": [
-        "import pandas as pd  \n",
-        "import numpy as np  \n",
-        "import matplotlib.pyplot as plt  \n",
-        "import seaborn as seabornInstance \n",
-        "from sklearn.model_selection import train_test_split \n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as seabornInstance\n",
+        "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn import metrics\n",
         "%matplotlib inline"
@@ -132,7 +141,7 @@
       },
       "source": [
         "**ScatterPlot the data**<br>\n",
-        "There are 22 different features for the weather. \n",
+        "There are 22 different features for the weather.\n",
         "Chose two to plot, in this case MinTemp and MaxTemp."
       ]
     },
@@ -142,10 +151,10 @@
         "id": "7wCPWi4IWBuL"
       },
       "source": [
-        "dataset.plot(x='MinTemp', y='MaxTemp', style='o')  \n",
-        "plt.title('MinTemp vs MaxTemp')  \n",
-        "plt.xlabel('MinTemp')  \n",
-        "plt.ylabel('MaxTemp')  \n",
+        "dataset.plot(x='MinTemp', y='MaxTemp', style='o')\n",
+        "plt.title('MinTemp vs MaxTemp')\n",
+        "plt.xlabel('MinTemp')\n",
+        "plt.ylabel('MaxTemp')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -208,7 +217,7 @@
         "id": "Ye4mGQrMWSJl"
       },
       "source": [
-        "regressor = LinearRegression()  \n",
+        "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train) #training the algorithm"
       ],
       "execution_count": null,
@@ -296,9 +305,9 @@
       "source": [
         "plt.scatter(X_test, y_test,  color='gray')\n",
         "plt.plot(X_test, y_pred, color='red', linewidth=2)\n",
-        "plt.title('MinTemp vs MaxTemp')  \n",
-        "plt.xlabel('MinTemp')  \n",
-        "plt.ylabel('MaxTemp')  \n",
+        "plt.title('MinTemp vs MaxTemp')\n",
+        "plt.xlabel('MinTemp')\n",
+        "plt.ylabel('MaxTemp')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -319,8 +328,8 @@
         "id": "M6Nqnh70Wp7w"
       },
       "source": [
-        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
-        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
       "execution_count": null,
@@ -387,10 +396,10 @@
         "id": "9A2A1QJgPHXJ"
       },
       "source": [
-        "dataset.plot(x='first col', y='second col', style='o')  \n",
-        "plt.title('first vs second')  \n",
-        "plt.xlabel('first')  \n",
-        "plt.ylabel('second')  \n",
+        "dataset.plot(x='first col', y='second col', style='o')\n",
+        "plt.title('first vs second')\n",
+        "plt.xlabel('first')\n",
+        "plt.ylabel('second')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -425,7 +434,7 @@
         "id": "DGMw4g37RB2L"
       },
       "source": [
-        "regressor = LinearRegression()  \n",
+        "regressor = LinearRegression()\n",
         "regressor.fit(X_train, y_train) #training the algorithm"
       ],
       "execution_count": null,
@@ -487,8 +496,8 @@
         "id": "8jDjvVY6RaSF"
       },
       "source": [
-        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
-        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
       "execution_count": null,
