--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNA3036ianG1MxBim/4cJGU",
+      "authorship_tag": "ABX9TyOkum8v+AiCA8To0Rd2jdnZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,14 +392,27 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "first_col='Temp9am'\n",
+        "second_col='Temp3pm'"
+      ],
+      "metadata": {
+        "id": "E-w0I4BYL6Hj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "9A2A1QJgPHXJ"
       },
       "source": [
-        "dataset.plot(x='first col', y='second col', style='o')\n",
-        "plt.title('first vs second')\n",
-        "plt.xlabel('first')\n",
-        "plt.ylabel('second')\n",
+        "dataset.plot(x=first_col, y=second_col, style='o')\n",
+        "title=first_col+' vs '+second_col\n",
+        "plt.title(title)\n",
+        "plt.xlabel(first_col)\n",
+        "plt.ylabel(second_col)\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -411,8 +424,8 @@
         "id": "Cgfwu6HgQq9S"
       },
       "source": [
-        "X = dataset['first column'].values.reshape(-1,1)\n",
-        "y = dataset['second column'].values.reshape(-1,1)"
+        "X = dataset[first_col].values.reshape(-1,1)\n",
+        "y = dataset[second_col].values.reshape(-1,1)"
       ],
       "execution_count": null,
       "outputs": []
