--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOupX9R0ah7HyTJ/sDogBz3",
+      "authorship_tag": "ABX9TyOUWQ192ESypO9V3GGLfFL1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,6 +230,28 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The mean absolute error, or MAE, is a popular metric for regression problems because the units of the error actually match the ones of the target variable.<br>\n",
+        "\n",
+        "There are no acceptable limits for MSE except that the lower the MSE the higher the accuracy of prediction as there would be excellent match between the actual and predicted data set. This is as exemplified by improvement in correlation as MSE approaches zero. However, too low MSE could result in overfitting.<br>\n",
+        "\n",
+        "The value of the error ranges from zero to infinity. MSE increases exponentially with an increase in error. A good model will have an MSE value closer to zero."
+      ],
+      "metadata": {
+        "id": "O-mIUXixN4Sc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MSE does not have a range. There is no good way to determine how good your MSE is without looking at the variance of the target variable. Even then, you have to manually interpret it based on the real world context. For example, if you are predicting kilometer and you convert it to millimeters, your MSE obviously is going to increase. This doesn't mean your model is getting worse. Really depends on your target variable."
+      ],
+      "metadata": {
+        "id": "xSivycaeO1oS"
+      }
     },
     {
       "cell_type": "code",
