--- a/Logistic_Regression_NB1.ipynb
+++ b/Logistic_Regression_NB1.ipynb
@@ -6,13 +6,16 @@
       "name": "Logistic Regression NB1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNotDtK7scYU3z+dgNHx5aV",
+      "machine_shape": "hm",
+      "gpuType": "L4",
+      "authorship_tag": "ABX9TyMVYoWoNdyfrWk4WMNaxAyg",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -43,7 +46,7 @@
       "source": [
         "**Import the libraries**<br>\n",
         "Note: we are using a model from the [SciKit Learn](https://scikit-learn.org/stable/) library. <br>\n",
-        "These models are good choices for doing baseline models and prototyping but are are not designed for production. "
+        "These models are good choices for doing baseline models and prototyping but are are not designed for production."
       ]
     },
     {
@@ -73,8 +76,8 @@
         "300 samples<br>\n",
         "2 classes<br>\n",
         "This data set is the perfect data set for logistic regression.\n",
-        "Train the model with this data set. \n",
-        "Pay attention to how well the model performs. \n"
+        "Train the model with this data set.\n",
+        "Pay attention to how well the model performs.\n"
       ]
     },
     {
@@ -123,7 +126,7 @@
       },
       "source": [
         "**Split the data into training and tests sets**\n",
-        "Randomly select 80% of the data points to be used for training the model. The rest will be used for testing the model. "
+        "Randomly select 80% of the data points to be used for training the model. The rest will be used for testing the model."
       ]
     },
     {
@@ -280,7 +283,7 @@
       },
       "source": [
         "# **Assignment 1**<br>\n",
-        "Now we are going to create a dataset that is not so ideal. \n",
+        "Now we are going to create a dataset that is not so ideal.\n",
         "\n",
         "**Make Sythnetic Data**<br>\n",
         "300 samples<br>\n",
@@ -290,8 +293,8 @@
         "```\n",
         "X,y = make_classification(n_samples=300, n_features=4,  n_classes=2, n_clusters_per_class=1, class_sep=0.1)\n",
         "```\n",
-        "Copy this above code and use this code to create a new data set. \n",
-        "You'll notice this data set has 2 classes but they are not necessarily clearly separated classes. \n",
+        "Copy this above code and use this code to create a new data set.\n",
+        "You'll notice this data set has 2 classes but they are not necessarily clearly separated classes.\n",
         "How will the model behave now?\n",
         "\n"
       ]
@@ -304,8 +307,8 @@
       "source": [
         "# **Assignment 2**<br>\n",
         "1. In the menu bar at the top of the page, select Runtime > Run all<br>\n",
-        "2. Does the accuracy change? What happened and why? \n",
-        "3. Look at the confusion matrix - what happened to your false postives and false negatives? \n"
+        "2. Does the accuracy change? What happened and why?\n",
+        "3. Look at the confusion matrix - what happened to your false postives and false negatives?\n"
       ]
     },
     {
@@ -315,8 +318,8 @@
       },
       "source": [
         "# **Assignment 3**<br>\n",
-        "1. Change the number of data points in the dataset. Right now you have 300. Try a larger number. \n",
-        "2. What happens with the model? What about the confusion matrix? \n",
+        "1. Change the number of data points in the dataset. Right now you have 300. Try a larger number.\n",
+        "2. What happens with the model? What about the confusion matrix?\n",
         "\n"
       ]
     },
@@ -328,7 +331,7 @@
       "source": [
         "# **Assignment 4**<br>\n",
         "1. Change the train/test split\n",
-        "2. What changes occur in the confusion matrix now? "
+        "2. What changes occur in the confusion matrix now?"
       ]
     }
   ]
