--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -292,16 +292,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9zrDQ-JGt9Ca"
-      },
+      "cell_type": "markdown",
       "source": [
-        "from IPython.display import Image\n",
-        "Image(\"images/grid_search_cross_validation.png\" , width=640)"
+        "![picture](https://github.com/cagBRT/Machine-Learning/blob/master/images/grid_search_cross_validation.png?raw=1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "y20_t3z8wp1I"
+      }
     },
     {
       "cell_type": "markdown",
@@ -558,15 +555,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "Image(\"images/leaveOneOut.png\" , width=400)"
+        "![picture](https://github.com/cagBRT/Machine-Learning/blob/master/images/leaveOneOut.png?raw=1)"
       ],
       "metadata": {
-        "id": "LpeSPLYSEPTq"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "DAvx3E4Cw03K"
+      }
     },
     {
       "cell_type": "markdown",
